--- a/index.adoc
+++ b/index.adoc
@@ -15,10 +15,7 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Welcome to Fall 2024! For those of you who are about to rock, I salute you!
-* First lecture will be on Tuesday, September 3rd, 11:40AM in room Park 159.
-* First assignment is Due Sept 6th. link:assts/asst01.html[Assignment 01: Hello C!]
-* First lab will be on Thursday, September 5th, 2:40PM in Park 230. We will go over git and using Github
+* Next assignment is Due Sept 13th. link:assts/asst02.html[Assignment 01: Learn to C]
 
 == Course Info
 
