--- a/index.adoc
+++ b/index.adoc
@@ -45,9 +45,9 @@ will be introduced at the end of the course.
 
 | Lecture | Park 159 | Tuesday and Thursday 11:40 AM - 1:00 PM 
 | Lab | Park 230 | Thursday 2:40 PM - 4:00 PM 
-| Office Hours - Prof. Aline Normoyle | Park 200B | Fridays, 3-5 PM (see slack for exceptions)
-| Office Hours - Paprika Chen | Park 231 | Tuesdays, 7-9 PM  
-| Office Hours - Yue Chen | Park 231 | Thursdays, 7-9 PM
+| Office Hours - Prof. Aline Normoyle | Park 200B | Fridays, 2-3 PM (But often will be available until 5 PM) 
+| Office Hours - Paprika Chen | Park 231 | Tuesdays, 7-8 PM  
+| Office Hours - Yue Chen | Park 231 | Thursdays, 7-8 PM
 
 |===
 
