--- a/assts/asst06.adoc
+++ b/assts/asst06.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 6: Secret messages
+:title: Assignment 6: 
 :Author Initials: ASN
 :Date:    2020-08-15
 :Revision: 0.1
@@ -12,9 +12,8 @@ include::header.adoc[]
 
 The goals for this assignment are:
 
-* Understand binary representations of data types
-* Directly manipulate basic types at the bit level
-* Work with bitwise operators: |, &, ~, ^
+* Work with pointer-based data structures
+* Strengthen C programming with strings and files
 
 [discrete]
 == Update your repository
@@ -31,236 +30,146 @@ Your repository should now contain a new folder named `{ASST}`.
 
 The `fetch` and `merge` commands update your repository with any changes from the original.
 
+= Matching braces 
 
-= Tiny Bitmaps
-
-A link:https://sneslab.net/wiki/Graphics_Format[1bpp], or 1-bit-per-pixel, 
-sprite stores a grid of black and white pixels using a single bit. 0 denotes 
-white and 1 denotes black. 
-
-image::https://sneslab.net/mw/images/c/c6/saa03_1bpp.png[width=400px] 
-
-In the program, `bitmap.c`, implement a program that reads in a single 64-bit 
-unsigned integer (e.g. `unsigned long`) and outputs it as an 8x8 1bpp sprite. 
+Implement a program, `match_braces.c`, that takes a C file as a command line
+argument and uses a stack to check for matched braces. If not all braces are matched, 
+print the line where a mis-matched brace occurs.
 
 [source,subs="quotes"]
-$ **./bitmap < bitmap1.txt**
-Image (unsigned long): ff818181818181ff
-@ @ @ @ @ @ @ @
-@             @
-@             @
-@             @
-@             @
-@             @
-@             @
-@ @ @ @ @ @ @ @
+----
+$ **make match_braces**
+gcc -g -Wall -Wvla -Werror match_braces.c -o match_braces
+$ **./match_braces**
+usage: ./match_braces <filename>
+$ **./match_braces prog.c**
+Cannot open file: prog.c
+$ **./match_braces prog1.c**
+Found matching braces: (21, 32) -> (23, 5)
+Found matching braces: (25, 30) -> (28, 9)
+Found matching braces: (17, 53) -> (29, 5)
+Unmatched brace on Line 31 and Column 1
+Found matching braces: (40, 47) -> (43, 5)
+Found matching braces: (36, 18) -> (47, 1)
+Unmatched brace on Line 34 and Column 34
 ----
 
 Requirements/Hints:
 
-* Your program should *must* use a bitmask! For example, to generate a 64-bit mask that obtains the left-most bit, do `0x1ul << 63`. The `ul` indicates an `unsigned long` value. `0x1` is the number one in hexadecimal.
-* The bitmap files store the values as hexadecimal values. To read them in, do `unsigned long img; scanf(" %lx", &img);`. Use `%lx` for printf also. You are given basecode that reads in the long integer from stdin.
+* Use your linked list implementation as a starting point.
+* Implement the functions `push`, `pop`, `clear`. Implementing `print` is also recommended to help you debug your assignment.
+* Use command line arguments to input the filename. 
+* Print the usage if the user inputs an incorrect number of command line arguments
+* Print an error if your program cannot open the file
+* Use `fgetc` to read the file one character at a time. Update the current line number when you encounter `\n`. Update the current column as you read in each character. 
+* To check for matched braces, push to the stack when you encounter a '{' and then pop from the stack when you encounter '}'. If the symbols pushed and popped do not match, there is an error. 
+* The output of the program should match the line and column numbers that your editor (such as VS Code) reports when you check for matched braces. 
 
-= Steganography
+NOTE: Unlike last week, you need to open the files as text data. See link:https://diveintosystems.org/book/C2-C_depth/IO.html#_file_inputoutput[File Input/Output] for examples.
 
-link:https://en.wikipedia.org/wiki/Steganography[Steganography] is the practice of hiding messages in plain sight. In this question, we will hide text messages using the least significant bits of an image. 
 
-[discrete]
-== Background
+== Tree
 
-_Credit: Chris Trailie (link:https://ursinus-cs174-s2022.github.io/CoursePage/Assignments/HW2_Steganography/#lsb[Original])_
+In the file, `tree.c`, implement a binary search tree. Do not change the header
+`tree.h`, nor the function declarations in `tree.c`. But you can add functions to `tree.c`! 
+We recommend using the book
+"Data Structures and Algorithm Analysis in C" by Mark Allen Weiss. See the
+link:../index.html[course webpage for a link].
 
-To understand how we will hide messages in the least significant bits of an image, let's look at the following write-up by 
-Chris Trailie, starting with the two pictures below. 
-++++
-<table style="width:650px;">
-    <tr>
-        <td><h4>Ordinary image</h4></td>
-        <td><h4>Hidden message</h4></td>
-    </tr>
-    <tr>
-        <td>
-            <img src = "https://ursinus-cs174-s2022.github.io/CoursePage/Assignments/HW2_Steganography/HW2_Steganography/images/birthday.png" width=300>
-        </td>
-        <td>
-            <img src = "https://ursinus-cs174-s2022.github.io/CoursePage/Assignments/HW2_Steganography/HW2_Steganography/images/birthday_encoded.png" width=300>
-        </td>
-    </tr>
-</table>
-
-<p>
-    The picture on the right contains 12 paragraphs of text on the Ursinus 150 strategic plan.  Can you see the difference?  No?  Well great, that's the point!  
-</p>
-<p>
-    So how do we do this?  The idea is beautifully simple, and is best understood with an example.  Consider the following 3-pixel image
-</p>
-
-<table style="width:250px;">
-    <tr>
-        <td style="background-color: #fe7732; width:50px; height:50px;"><span style="color:white">[254, 119, 50]</span></td>
-        <td style="background-color: #028dfe; width:50px; height:50px;"><span style="color:white">[2, 141, 254]</span></td>
-        <td style="background-color: #5b9f40; width:50px; height:50px;"><span style="color:white">[91, 159, 64]</span></td>
-    </tr>
-</table>
-
-<p>
-    We're going to extract a binary signal by looking at the <b>least significant bit</b> (the 1's place in binary) of each color channel in each pixel from left to right from red, to green, to blue, and put them together into one binary string.  In other words, for a particular pixel and a particular color channel, we'll extract a 0 if it's an even number and a 1 if it's an odd number.  Let's look at the first 8 bits in the above image.  We have 
-</p>
-<table style="width:50px;">
-    <tr>
-        <td>254</td><td>0</td>
-    </tr>
-    <tr>
-        <td>119</td><td>1</td>
-    </tr>
-    <tr>
-        <td>50</td><td>0</td>
-    </tr>
-    <tr>
-        <td>2</td><td>0</td>
-    </tr>
-    <tr>
-        <td>141</td><td>1</td>
-    </tr>
-    <tr>
-        <td>254</td><td>0</td>
-    </tr>
-    <tr>
-        <td>91</td><td>1</td>
-    </tr>
-    <tr>
-        <td>159</td><td>1</td>
-    </tr>
-</table>
-
-<p>
-    All together, this is the binary string <b>01001011</b>, which is the character <b>'K'</b> in <a href = "https://www.asciitable.com/">ASCII</a>.  What if we wanted to change it to some other character though?  Perhaps the character <b>'z'</b>, which is <b>0x7A</b> hex, or <b>01111010</b> in binary.  Then we can just tweak the 1's place of the pixel values as follows, where I've bolded the ones that have changed:
-</p>
-
-<table style="width:50px;">
-    <tr>
-        <td>254</td><td>0</td>
-    </tr>
-    <tr>
-        <td>119</td><td>1</td>
-    </tr>
-    <tr>
-        <td><b>51</b></td><td><b>1</b></td>
-    </tr>
-    <tr>
-        <td><b>3</b></td><td><b>1</b></td>
-    </tr>
-    <tr>
-        <td>141</td><td>1</td>
-    </tr>
-    <tr>
-        <td>254</td><td>0</td>
-    </tr>
-    <tr>
-        <td>91</td><td>1</td>
-    </tr>
-    <tr>
-        <td><b>158</b></td><td><b>0</b></td>
-    </tr>
-</table>
-
-<p>
-    Here's what these updated values look like 
-</p>
-
-<table style="width:250px;">
-    <tr>
-        <td style="background-color: #fe7733; width:50px; height:50px;"><span style="color:white">[254, 119, 51]</span></td>
-        <td style="background-color: #038dfe; width:50px; height:50px;"><span style="color:white">[3, 141, 254]</span></td>
-        <td style="background-color: #5b9e40; width:50px; height:50px;"><span style="color:white">[91, 158, 64]</span></td>
-    </tr>
-</table>
-
-<p>
-    If you were just looking at it and comparing it to what we started with, you would never notice the difference!  So we have freedom to tweak the least significant bit of every color channel of every pixel at will to encode text, and this is exactly what you will be doing in this assignment!.  In a 500x500 image, for example, this means we can store 250,000 bits.  Since each ASCII character is 8 bits, this is 31,250 characters total, or roughly about 6000 words.
-</p>
-++++
-
-:sectnums:
-
-= Decode
-
-In the file, `decode.c`, write a program that reads in a PPM file (raw, or binary, format) and then outputs any message that might be stored in 
-the least significant bits of each color. Your program should read bits from each of the red, green, and blue colors -- top to bottom, left to right. 
-You should keep decoding until you reach the empty character `\0`.
-
-For example, consider the example file `tiny_encoded.ppm`. Decoding should give you the bits `001100010011011100110100001000010000101000000000`. 
-
-If we group them up into ASCII char variables, we see this is the character string `174!\n`.
-
-++++
-<table style="width:100px;">
-<tr>
-    <td>00110001</td><td><code>'1'</code></td>
-</tr>
-<tr>
-    <td>00110111</td><td><code>'7'</code></td>
-</tr>
-<tr>
-    <td>00110100</td><td><code>'4'</code></td>
-</tr>
-<tr>
-    <td>00100001</td><td><code>'!'</code></td>
-</tr>
-<tr>
-    <td>00001010</td><td><code>'\n'</code></td>
-</tr>
-<tr>
-    <td>00000000</td><td><code>'\0'</code></td>
-</tr>
-</table>
-++++
-
-Your program should perform as follows.
-
-[source,subs="quotes"]
+[code,subs="quotes"]
 ----
-$ **./decode tiny_encoded.ppm**
-Reading tiny_encoded.ppm with width 4 and height 4
-Max number of characters in the image: 6
-174!
+$ **make ./tree_tests**
+gcc -g -Wall -Wvla -Werror -Wno-unused-variable -Wno-unused-but-set-variable tree_tests.c tree.c -o tree_tests -lpthread
+$ **./tree_tests** 
+Running tests...
+test 1: insert for empty tree: PASSED
+test 2: name set correctly: PASSED
+test 3: left is null: PASSED
+test 4: right is null: PASSED
+test 5: name set correctly: PASSED
+test 6: right is null: PASSED
+test 7: name set correctly: PASSED
+test 8: item not in tree: PASSED
+test 9: item in tree: PASSED
+test 10: found correct object: PASSED
+M
+ l:A
+ r:X
+  l:P
+A
+M
+P
+X
 ----
 
-Requirements/Hints:
+Requirements:
 
-* You should read the PPM filename as a command line argument
-* You should report the usage if no file is given to the program
-* You should report an error if the file cannot be read
-* Re-use your implementation of `read_ppm` and `write_ppm` from link:asst05.html[Assignment 05].
-* Output the size of the image along with the maximum number of characters it can store
-* For debugging, try printing out values in hex format, e.g. `printf("%02X", c);`
-* This question is a little easier if you use a 1D array because you can cast the `struct ppm_pixel*` array to an `unsigned char*` array.
+* You must not modify the basecode for `tree.h` or `tree.c`. You may add functions to `tree.c`
+* Your output should match the above and pass all tests
 
-= Encode
+== Dependencies
 
-In the file, `encode.c`, write a program that reads in a PPM file (raw, or binary, format) and 
-asks the user for a message to embed within it. 
+A _dependency_ is a general software term for any software required by another. In this question, 
+we will store files in a binary search tree so we can list their file dependencies, 
+as determined by `#include` statements. For example, 
+the file "Animal.h" depends on "Locomotion.h". 
 
-[source,subs="quotes"]
+In the file, `dependency.c`, implement a program that builds a binary search tree of a 
+given set of files. After building the tree, the program should give the user a prompt where they 
+can list the processed files in alphabetical order and then query the dependencies of the file by 
+giving the filename.  
+
+[code, subs="quotes"]
 ----
-$ **make encode**
-gcc -g -Wall -Wvla -Werror encode.c read_ppm.c -o encode
-$ **./encode feep-raw.ppm**
-Reading feep-raw.ppm with width 4 and height 4
-Max number of characters in the image: 5
-Enter a phrase: **lol**
-Writing file feep-raw-encoded.ppm
+$ **./dependency `` ` ``find code -name "*.h" -o -name "*.cpp"`` ` ``**
+Processing 11 files
+Thread 0 processing 4 files (arguments 2 to 6)
+Thread 1 processing 4 files (arguments 6 to 10)
+Thread 2 processing 3 files (arguments 10 to 13)
+Elapsed time is 0.000496
+$ list
+code/Animal.h
+code/Bird.h
+code/Duck.h
+code/Fish.h
+code/Fly.h
+code/Locomotion.h
+code/Seal.h
+code/Swim.h
+code/Walk.h
+code/Whale.h
+code/Zoo.cpp
+$ code/Animal.cpp
+code/Animal.cpp not found
+$ code/Animal.h
+code/Animal.h has the following dependencies
+  string
+  vector
+  Locomotion.h
+$ code/Zoo.cpp
+code/Zoo.cpp has the following dependencies
+  Animal.h
+  Bird.h
+  Duck.h
+  Fish.h
+  Seal.h
+  Whale.h
+  Locomotion.h
+  Walk.h
+  Fly.h
+  Swim.h
+$ apple
+apple not found
+$ quit
 ----
 
-Requirements/Hints:
+Requirements:
 
-* You should read the PPM filename as a command line argument
-* You should report the usage if no file is given to the program
-* You should report an error if the file cannot be read
-* You should output a new file based on the input name. For example, if the input is `feep-raw.ppm`, the new file with the encoded message should be `feep-raw-encoded.ppm`.
-* Re-use your implementation of `read_ppm` from link:asst05.html[Assignment 05].
-* Output the size of the image along with the maximum number of characters it can store
-* For debugging, try printing out values in hex format, e.g. `printf("%02X", c);`
+* Check that a file is valid before adding it to the tree
+* Support the commands: quit, list, <filename>
+* Your program should take a list of files as command line arguments. The `find` command computes this list of files. 
+* Use `strstr` and `fgets` to parse the source file and find lines containing `#include`
+* Strip the filenames from the `#include` lines when printing dependencies.
 
 = Submit your work
 
@@ -268,7 +177,7 @@ Push you work to github to submit your work.
 
 [source]
 ----
-$ cd A01
+$ cd {ASST}
 $ git status
 $ git add *.c 
 $ git status
@@ -278,25 +187,24 @@ $ git push
 $ git status
 ----
 
-
 = Grading Rubric
 
 *Assignment rubrics*
 
 Grades are out of 4 points.
 
-* (1 points) bitmap
+* (2 points) matched braces
+** (0.2 points) style and header comment
+** (0.8 points) correct output and behavior, supports command line arguments
+** (1.0 points) no memory errors
+* (1 points) Tree
 ** (0.1 points) style and header comment
-** (0.4 points) uses bitwise operators to display the image in ASCII
+** (0.4 points) implements all functions, passes all tests and does not modify basecode
 ** (0.5 points) no memory errors
-* (1 points) Decode
+* (1 points) Dependencies
 ** (0.1 points) style and header comment
-** (0.65 points) correct behavior
-** (0.75 points) no memory errors
-* (1.5 points) Encode
-** (0.1 points) style and header comment
-** (0.65 points) correct behavior
-** (0.75 points) no memory errors
+** (0.4 points) Correct behavior
+** (0.5 points) no memory errors
 
 *Code rubrics*
 
